--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,7 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/java,python,jupyternotebooks,git,linux
+
+
+draft*
+test*
